# cocos-create-2.x-engine

./: README.md
cocos2d-x/: CMakeLists.txt  Extension.md  ReleaseNote.md  UpgradeGuide.md
cocos2d-x/cocos/: Android.mk
cocos2d-x/cocos/2d/: CCLabelLayout.cpp  CCTTFLabelRenderer.cpp
cocos2d-x/cocos/audio/android/: AudioEngine-inl.cpp  ICallerThreadUtils.h  PcmAudioService.cpp  PcmAudioService.h
cocos2d-x/cocos/audio/apple/: AudioCache.mm  AudioEngine-inl.h  AudioEngine-inl.mm
cocos2d-x/cocos/audio/win32/: AudioCache.cpp  AudioEngine-win32.cpp
cocos2d-x/cocos/base/: CCData.h  ccConfig.h  ccUtils.h  lz4.cpp  resdec.cpp  resdec.h
cocos2d-x/cocos/editor-support/: IOBuffer.h  IOTypedArray.cpp  MeshBuffer.cpp  MiddlewareMacro.h  TypedArrayPool.cpp
cocos2d-x/cocos/editor-support/dragonbones-creator-support/: CCFactory.h
cocos2d-x/cocos/editor-support/particle/: ParticleSimulator.cpp
cocos2d-x/cocos/editor-support/spine/: SkeletonBinary.cpp
cocos2d-x/cocos/editor-support/spine-creator-support/: SkeletonDataMgr.cpp  SkeletonRenderer.cpp
cocos2d-x/cocos/math/: Mat3.cpp  Mat4.cpp  Quaternion.cpp  Quaternion.h  Vec3.cpp  Vec4.cpp
cocos2d-x/cocos/network/: CCDownloader-curl.cpp  HttpClient-android.cpp  HttpClient-apple.mm  HttpClient.h  SocketIO.cpp  WebSocket-libwebsockets.cpp  WebSocketServer.cpp
cocos2d-x/cocos/platform/: CCApplication.h  CCCache.cpp  CCCache.h  CCCanvasRenderingContext2D.h  CCFileUtils.cpp  CCFileUtils.h  CCImage.cpp  CCImage.h  CCTimer.cpp  CCTimer.h  CountdownTrigger.cpp  CountdownTrigger.h
cocos2d-x/cocos/platform/android/: Android.mk  CCApplication-android.cpp  CCCanvasRenderingContext2D-android.cpp  CCFileUtils-android.cpp
cocos2d-x/cocos/platform/android/jni/: JniHelper.h  JniImp.cpp  JniImp.h
cocos2d-x/cocos/platform/android/libcocos2dx/: build.gradle
cocos2d-x/cocos/platform/ios/: CCApplication-ios.mm  CCModuleConfigIOS.release.xcconfig
cocos2d-x/cocos/platform/mac/: CCApplication-mac.mm
cocos2d-x/cocos/platform/win32/: CCApplication-win32.cpp
cocos2d-x/cocos/renderer/gfx/: Texture.h
cocos2d-x/cocos/renderer/renderer/: Technique.cpp
cocos2d-x/cocos/renderer/scene/: MemPool.cpp  NodeProxy.cpp  NodeProxy.hpp  RenderFlow.cpp
cocos2d-x/cocos/renderer/scene/assembler/: AssemblerBase.cpp  AssemblerSprite.cpp  RenderData.cpp  RenderDataList.cpp
cocos2d-x/cocos/scripting/js-bindings/auto/: jsb_cocos2dx_audioengine_auto.cpp  jsb_cocos2dx_audioengine_auto.hpp  jsb_cocos2dx_auto.cpp  jsb_cocos2dx_auto.hpp  jsb_cocos2dx_dragonbones_auto.cpp  jsb_cocos2dx_dragonbones_auto.hpp  jsb_cocos2dx_editor_support_auto.cpp  jsb_cocos2dx_editor_support_auto.hpp  jsb_cocos2dx_extension_auto.cpp  jsb_cocos2dx_extension_auto.hpp  jsb_cocos2dx_network_auto.cpp  jsb_cocos2dx_network_auto.hpp  jsb_cocos2dx_particle_auto.cpp  jsb_cocos2dx_particle_auto.hpp  jsb_cocos2dx_spine_auto.cpp  jsb_cocos2dx_spine_auto.hpp  jsb_gfx_auto.cpp  jsb_gfx_auto.hpp  jsb_renderer_auto.cpp  jsb_renderer_auto.hpp  jsb_video_auto.cpp  jsb_video_auto.hpp  jsb_webview_auto.cpp  jsb_webview_auto.hpp
cocos2d-x/cocos/scripting/js-bindings/docs/: JSB2.0-learning-en.md  JSB2.0-learning-zh.md
cocos2d-x/cocos/scripting/js-bindings/event/: EventDispatcher.cpp
cocos2d-x/cocos/scripting/js-bindings/jswrapper/: MappingUtils.cpp  MappingUtils.hpp  State.cpp  State.hpp  Value.cpp  Value.hpp  ValueArrayPool.cpp  ValueArrayPool.h
cocos2d-x/cocos/scripting/js-bindings/jswrapper/chakracore/: Class.cpp  HelperMacros.h  Object.cpp
cocos2d-x/cocos/scripting/js-bindings/jswrapper/jsc/: Class.cpp  HelperMacros.h
cocos2d-x/cocos/scripting/js-bindings/jswrapper/sm/: Object.cpp
cocos2d-x/cocos/scripting/js-bindings/jswrapper/v8/: Object.hpp  SeApi.h
cocos2d-x/cocos/scripting/js-bindings/jswrapper/v8-12.x/: Class.cpp  Class.hpp  HelperMacros.cpp  HelperMacros.h  Object.cpp  Object.hpp  ObjectWrap.cpp  ObjectWrap.h  ScriptEngine.cpp  ScriptEngine.hpp  Utils.cpp  Utils.hpp  Value.cpp  Value.hpp  WebWorker.cpp  WebWorker.h  WebWorkerEndec.cpp  WebWorkerEndec.hpp
cocos2d-x/cocos/scripting/js-bindings/manual/: JavaScriptJavaBridge.cpp  JavaScriptJavaBridge.h  JavaScriptObjCBridge.h  JavaScriptObjCBridge.mm  jsb_classtype.cpp  jsb_classtype.hpp  jsb_cocos2dx_manual.cpp  jsb_cocos2dx_manual.hpp  jsb_cocos2dx_network_manual.cpp  jsb_cocos2dx_network_manual.h  jsb_conversions.cpp  jsb_conversions.hpp  jsb_dragonbones_manual.cpp  jsb_dragonbones_manual.hpp  jsb_gfx_manual.cpp  jsb_gfx_manual.hpp  jsb_global.cpp  jsb_global.h  jsb_module_register.cpp  jsb_module_register.hpp  jsb_ncnn.cpp  jsb_node.cpp  jsb_node.hpp  jsb_opengl_manual.cpp  jsb_opengl_manual.hpp  jsb_platform.h  jsb_platform_android.cpp  jsb_platfrom_apple.mm  jsb_platfrom_win32.cpp  jsb_renderer_manual.cpp  jsb_renderer_manual.hpp  jsb_socketio.cpp  jsb_socketio.hpp  jsb_spine_manual.cpp  jsb_spine_manual.hpp  jsb_websocket.cpp  jsb_websocket.hpp  jsb_websocket_server.cpp  jsb_websocket_server.hpp  jsb_worker_manual.cpp  (+3 more)
cocos2d-x/cocos/storage/local-storage/: LocalStorage-android.cpp  LocalStorage.cpp  LocalStorage.h
cocos2d-x/cocos/ui/edit-box/: EditBox-android.cpp  EditBox-ios.mm  EditBox-mac.mm  EditBox-win32.cpp
cocos2d-x/docs/worker/: demo.md
cocos2d-x/extensions/assets-manager/: AssetsManagerEx.cpp  AssetsManagerEx.h  CCAsyncTaskPool.h  CCEventAssetsManagerEx.h  Manifest.cpp
cocos2d-x/simulator/mac/Simulator.app/Contents/: Info.plist
cocos2d-x/simulator/mac/Simulator.app/Contents/Resources/: jsb.sqlite  main.js  preview-scene.json
cocos2d-x/simulator/mac/Simulator.app/Contents/_CodeSignature/: CodeResources
cocos2d-x/templates/: cocos2dx_files.json
cocos2d-x/templates/js-template-default/frameworks/runtime-src/Classes/: AppDelegate.cpp
cocos2d-x/templates/js-template-default/frameworks/runtime-src/proj.android-studio/: settings.gradle
cocos2d-x/templates/js-template-link/: main.js
cocos2d-x/templates/js-template-link/frameworks/runtime-src/Classes/: AppDelegate.cpp
cocos2d-x/templates/js-template-link/frameworks/runtime-src/proj.android-studio/: gradle.properties  settings.gradle
(+94 files in other folders)
